<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background_color"
        tools:context=".fragment.MainFragment">

        <TextView
            android:id="@+id/frag_main_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Chowis"
            android:textColor="@color/white"
            android:textSize="96sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/frag_main_registration_button"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="90dp"
            android:backgroundTint="@color/button_mint_color"
            android:text="@string/device_registration"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/frag_main_logo_text" />

        <TextView
            android:id="@+id/connection_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/select_connection_mode_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frag_main_registration_button" />

        <RadioGroup
            android:id="@+id/mode_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:paddingStart="90dp"
            android:paddingEnd="90dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/connection_mode_text">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="73dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:background="@drawable/main_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/direct_mode"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="73dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:background="@drawable/main_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/router_mode"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RadioGroup>

        <Button
            android:id="@+id/frag_main_analysis_button"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="90dp"
            android:backgroundTint="@color/button_mint_color"
            android:text="@string/analysis"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/mode_radio_group" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="105dp"
            android:orientation="horizontal"
            android:paddingStart="90dp"
            android:paddingEnd="90dp"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/frag_main_function_button"
                android:layout_width="0dp"
                android:layout_height="88dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_mint_color"
                android:text="@string/function_button_string"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/frag_main_sample_button"
                android:layout_width="0dp"
                android:layout_height="88dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_mint_color"
                android:text="@string/sample_button_string"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>