<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/activity_background_color"
        tools:context=".fragment.FunctionFragment">

        <TextView
            android:id="@+id/function_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/function_title_text"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/function_firmware_button"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="116dp"
            android:backgroundTint="@color/button_mint_color"
            android:text="@string/function_firmware_string"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/function_title_text" />

        <Button
            android:id="@+id/function_wifi_button"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="116dp"
            android:backgroundTint="@color/button_mint_color"
            android:text="@string/function_wifi_string"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/function_firmware_button" />

        <Button
            android:id="@+id/function_battery_button"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="116dp"
            android:backgroundTint="@color/button_mint_color"
            android:text="@string/function_battery_string"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@+id/function_wifi_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
